tidied up the user dashboard

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <small>Inquiries</small>
                 </div>
             </div>
-            <ul class="menu-links">
+            <ul class="menu-links" id="message-history-list">
                 <li><a href="#"><i class="fas fa-history"></i> My Message History</a></li>
                 <li><a href="#"><i class="fas fa-heart"></i> Saved Properties</a></li>
                 <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
