fixed the filing and arranged properly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 
@@ -28,7 +28,7 @@
     <div class="profile-nav-container">
         <div id="user-profile-header" onclick="toggleDashboard()">
             <div class="user-avatar">
-                <img src="user-line.png" alt="profile png" id="user-icon-image">
+                <img src="assets/images/user-line.png" alt="profile png" id="user-icon-image">
             </div>
             <span id="display-name"></span>
         </div>
@@ -64,7 +64,7 @@
     </header>
 
     <div class="hero-section">
-        <img src="mike-hindle-a8Slhd4Kvxw-unsplash.jpg" alt="picture of a house for rent" class="background-image">
+        <img src="assets/images/mike-hindle-a8Slhd4Kvxw-unsplash.jpg" alt="picture of a house for rent" class="background-image">
         <div class="hero-content">
             <h3>Welcome to Granville Real Estate</h3>
             <h1>Invest in your dream home today</h1>
@@ -276,7 +276,7 @@
     <section id="about" class="about-us-section">
 
         <div class="about-image-container">
-            <img src="nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg" alt="image of an interior" class="about-image">
+            <img src="assets/images/nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg" alt="image of an interior" class="about-image">
         </div>
 
         <div class="about-description-container">
@@ -333,7 +333,7 @@
                    
                     <div class="contact-card">
                         <div class="card-top">
-                            <div class="icon"><img src=envelope.png alt="image of an envelope" ></div>
+                            <div class="icon"><img src="assets/images/envelope.png" alt="image of an envelope" ></div>
                             <div class="details">
                                 <h3>Message</h3>
                                 <p>080 6587 9200</p>
@@ -355,7 +355,7 @@
 
                     <div class="contact-card">
                         <div class="card-top">
-                            <div class="icon"><img src="video-camera-alt.png" alt="png of video camera"></div>
+                            <div class="icon"><img src="assets/images/video-camera-alt.png" alt="png of video camera"></div>
                             <div class="details">
                                 <h3>Video Call</h3>
                                 <p>080 6587 9200</p>
@@ -368,7 +368,7 @@
 
             <div class="image-section">
                 <div class="arch-frame">
-                    <img src="HQ.jpg" alt="Modern House">
+                    <img src="assets/images/HQ.jpg" alt="Modern House">
                 </div>
             </div>
 
@@ -392,7 +392,7 @@
     </div>
 </div>
 
-    <script src="app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 
