--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="assets/css/login.css">
     <title>Create an account</title>
 </head>
 <body>
@@ -18,35 +18,35 @@
 
         <div class="form-side">
             <div class="login-box">
-                <h2>Welcome!</h2>
+                <h2>Welcome Back</h2>
                 <p class="subtitle">Please enter your details to view listings</p>
 
-                <form id="loginForm">
+                <form id="register-form">
                      <div class="input-group">
                         <label for="email">Email</label>
-                        <input type="text" id="regEmail" placeholder="Enter your email" required>
+                        <input type="text" id="reg-email" placeholder="Enter your email" required>
                     </div>
 
                     <div class="input-group">
                         <label for="username">Username</label>
-                        <input type="text" id="regUsername" placeholder="Enter your username" required>
+                        <input type="text" id="reg-username" placeholder="Enter your username" required>
                     </div>
 
                     <div class="input-group">
                         <label for="password">Password</label>
-                        <input type="password" id="regPassword" placeholder="********" required>
+                        <input type="password" id="reg-password" placeholder="********" required>
                     </div>
 
                     <button type="button" class="btn-primary" onclick="registerUser()">Sign Up</button>
 
                     <p id="errorMessage"></p>
 
-                    <p class="footer-text">Already have an account? <a href="login.html">Login here</a></p>
+                    <p class="footer-text">Already have an account? <a href="login.html">Sign In</a></p>
                 </form>
             </div>
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
