--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="profile-nav-container">
             <div id="user-profile-header" onclick="toggleDashboard()">
                 <div class="user-avatar">
-                    <img src="assets/images/user-line.png" alt="profile png" id="user-icon-image">
+                    <img src="assets/images/profiles/default-user.jpeg" alt="profile png" id="user-icon-image">
                 </div>
                 <span id="display-name"></span>
             </div>
@@ -62,7 +62,7 @@
             <ul id="profile-settings-section" class="collapsible-content">
                 <li class="profile-upload-item">
                     <div class="profile-preview-container">
-                        <img id="dashboard-profile-preview" src="./assets/images/default-user.png" alt="Profile">
+                        <img id="dashboard-profile-preview" src="./assets/images/user-fill.png" alt="Profile">
                         <label for="profile-input" class="edit-overlay"><i class="fas fa-camera"></i></label>
                     </div>
                     <form id="settings-profile-form">
